# xelis-genesix-wallet

./: .flutter_rust_bridge.yml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  analysis_options_ci.yaml  flutter_native_splash.yaml  flutter_rust_bridge.yaml  icons_launcher.yaml  justfile  l10n.yaml  pubspec.yaml
.agents/knowledge/: DOMAIN_VOCABULARY.md  PROJECT_NOTES.md
.claude/agents/: code-reviewer.md  codebase-explorer.md  guidelines-maintainer.md  implementation-worker.md  quick-implementer.md  security-reviewer.md  ui-ux-designer.md  validation-runner.md
.codex/agents/: code-reviewer.toml  codebase-explorer.toml  guidelines-maintainer.toml  implementation-worker.toml  quick-implementer.toml  security-reviewer.toml  ui-ux-designer.toml  validation-runner.toml
.github/: copilot-instructions.md  pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: code-reviewer.agent.md  codebase-explorer.agent.md  guidelines-maintainer.agent.md  implementation-worker.agent.md  quick-implementer.agent.md  security-reviewer.agent.md  ui-ux-designer.agent.md  validation-runner.agent.md
.github/workflows/: build_android.yml  build_linux.yml  build_macos.yml  build_windows.yml  ci.yml  ci_checks_dev.yml  ci_checks_main.yml  ci_checks_reusable.yml  dart_actions.yml  (+3 more)
android/: build.gradle  gradle.properties  settings.gradle
docs/: multisig-signing.md
ios/: Podfile
lib/: bridge_definitions.dart  bridge_generated.dart  ffi.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
native/: .gitignore  Cargo.toml
native/src/: api.rs  bridge_generated.rs
news/: README.md  index.json
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/rust.xcodeproj/: project.pbxproj
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  multisig.rs
rust/src/api/: address_book.rs  api.rs  dtos.rs  keypair.rs  logger.rs  mod.rs  network.rs  precomputed_tables.rs  progress_report.rs  seed_search_engine.rs  table_generation.rs  utils.rs  wallet.rs  xswd.rs
rust/src/api/models/: address_book_dtos.rs  mod.rs  network.rs  wallet_dtos.rs  xswd_dtos.rs
rust/src/api/models/xswd_dtos/: tests.rs
rust/src/api/time/: mod.rs  native.rs  web.rs
rust/src/api/wallet/: amounts.rs  assets.rs  history.rs  multisig.rs  runtime.rs  transactions.rs
rust/src/api/wallet/amounts/: tests.rs
rust/src/api/wallet/assets/: tests.rs
rust/src/api/wallet/history/: tests.rs
rust/src/api/wallet/multisig/: tests.rs
rust/src/api/wallet/runtime/: table_cache.rs  tests.rs
rust/src/api/wallet/runtime/table_cache/: tests.rs
rust/src/api/wallet/transactions/: builders.rs  prepared.rs  submission.rs  tests.rs
rust/src/api/wallet/transactions/builders/: tests.rs
rust/src/api/wallet/transactions/prepared/: tests.rs
rust/src/api/wallet/transactions/submission/: tests.rs
rust/src/api/xswd/: impl.rs  mod.rs  native.rs  stub.rs
rust/src/api/xswd/impl/: tests.rs
rust/src/api/xswd/stub/: tests.rs
rust/src/multisig/: tests.rs
rust/tests/: multisig_contract.rs  wallet_lifecycle.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
tool/: sync_forui_docs.dart  validate_ai_guidelines.dart  validate_news_feed.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+760 files in other folders)
