[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.40", features = ["log"] }
anyhow = "1"
log = "0.4"
parking_lot = "0.12.1"
simplelog = "0.12.1"
lazy_static = "1.4.0"
serde_json = "1"
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_wallet", default-features = false }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }
serde = { version = "1.0.197", features = ["derive"] }

[features]
network_handler = ["xelis_wallet/network_handler"]
