[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["log"] }
anyhow = "1"
indexmap = { version = "2.0.0", features = ["serde"] }
log = "0.4"
parking_lot = "0.12.1"
simplelog = "0.12.1"
lazy_static = "1.4.0"
serde_json = "1"
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_wallet", default-features = false }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }
serde = { version = "1.0.197", features = ["derive"] }
trie-rs = "0.4.2"
regex = "1.11.1"
lru = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23.29", features = ["ring"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["xelis_wallet/api_server"]
network_handler = ["xelis_wallet/network_handler"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
